[package]
name = "rs-tutorial"
version = "1.0.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
rand = "0.8.5"
log = "0.4.22"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
env_logger = "0.11.5"
criterion = "0.5.1"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.release.build-override]
opt-level = 0
codegen-units = 256