[env]
RUST_LOG = "debug"

[doc]
browser = "chromium"

[package]
name = "rs-tutorial"
version = "1.0.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "1.4.1"
criterion = "0.5.1"


[[bench]]
name = "my_benchmark"
harness = false

[dependencies]
rand = "0.8.5"
log = "0.4.22" # log api
env_logger = "0.11.5" # log impl
tracing = "0.1.40" # tracing
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132" # json lib
rust-csv = "0.1.0"
criterion = "0.5.1"
sqlx = "0.8.2" # sql client
redis_rs = "0.9.0" # redis client
rayon = "1.10.0" # for CPU task
tokio = "1.41.0" # async lib for IO task
tokio-tungstenite = "0.24.0" # websocket
tonic = "0.12.3" # gRPC lib
rocket = "0.5.1"
futures = { version = "0.3.31", features = ["thread-pool"] } # web server
num-traits = "0.2.19"
num-derive = "0.4.2"
lazy_static = "1.5.0"
chrono = "0.4.38"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = '...'  # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.dev.build-override]
opt-level = 0
codegen-units = 256

[profile.release.build-override]
opt-level = 0
codegen-units = 256